src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Comp_Type__c</fullName>
        <formula>Comp__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comp Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comp</label>
        <referenceTo>Sale__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Upon__c</fullName>
        <label>Due Upon</label>
        <picklist>
            <picklistValues>
                <fullName>Lease Commencement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occupancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open for Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percent_Due__c</fullName>
        <label>Percent Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <formula>Total_Commissions__c * IF(ISBLANK( Percent_Due__c ),1,Percent_Due__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Commissions__c</fullName>
        <formula>Comp__r.Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total commissions from the Comp</inlineHelpText>
        <label>Total Commissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Due__c</fullName>
        <formula>Subtotal__c +  Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{000}{DD}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>